Integrate Angular.js

--- a/views/about.html
+++ b/views/about.html
@@ -6,7 +6,7 @@
 				<div class="display-t js-fullheight">
 					<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 						<h1>About <em>our</em> Shop</h1>
-						<h2>Brought to you by <a href="#" target="_blank">Anonymity Freelancing</a></h2>
+						<h2>Brought to you by <a href="https://anonymityfreelancing.github.io" target="_blank">Anonymity Freelancing</a></h2>
 					</div>
 				</div>
 			</div>
