--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -3,14 +3,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center logo-wrap">
-                    <div id="fh5co-logo"><a href="index.html">Priya Modular Kitchen and Interiors<span>.</span></a></div>
+                    <div id="fh5co-logo"><a href="#!/">Priya Modular Kitchen and Interiors<span>.</span></a></div>
                 </div>
                 <div class="col-xs-12 text-center menu-1 menu-wrap">
                     <ul>
-                        <li ui-sref-active="active"><a sref="home">Home</a></li>
-                        <li ui-sref-active="active"><a sref="about">About Us</a></li>
-                        <li ui-sref-active="active"><a sref="gallery">Gallery</a></li>
-                        <li ui-sref-active="active"><a sref="contact">Contact Us</a></li>
+                        <li><a detect-active-tab="1" href="#!/">Home</a></li>
+                        <li><a detect-active-tab="1" href="#!/about">About Us</a></li>
+                        <li><a detect-active-tab="1" href="#!/gallery">Gallery</a></li>
+                        <li><a detect-active-tab="1" href="#!/contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
