Update content, Folder structure and switch to Angular UI Router

--- a/views/contact.html
+++ b/views/contact.html
@@ -20,7 +20,12 @@
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 				<h2>Don't be shy, let's chat.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim quae vitae cupiditate, sequi quam ea id dolor reiciendis consectetur repudiandae. Rem quam, repellendus veniam ipsa fuga maxime odio? Eaque!</p>
+				<p>V.D.Ravishankar<br/>
+				#32, V.V.Koil lane,<br/>
+				Choolai, Chennai-600112. <br/>
+				Mobile: <a href="tel://8939158825">8939158825</a><br/>
+				Email: <a href="mailto:loguvdrs@gmail.com">loguvdrs@gmail.com</a></p>
+
 				<p><a href="mailto:modularkitchen122@gmail.com" class="btn btn-primary btn-outline">Contact Us</a></p>
 			</div>
 		</div>
@@ -48,8 +53,8 @@
 					</div>
 					<div class="row form-group">
 						<div class="col-md-12">
-							<label for="message">Your Message</label>
-							<textarea name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
+							<label for="requirements">Your Requirements</label>
+							<textarea name="requirements" id="requirements" cols="30" rows="10" class="form-control"></textarea>
 						</div>
 					</div>
 					<div class="row form-group">
