--- a/views/home.html
+++ b/views/home.html
@@ -18,6 +18,14 @@
 <div id="fh5co-featured-testimony" class="fh5co-section">
     <div class="container">
         <div class="row">
+            <div class="col-md-10 col-md-push-1" style="text-align: center">
+                <h2>Modular kitchen starts from Rs.80,000  for individual client</h2>
+                <p>Special Project rates for builders of bulk orders <br/>
+                Drawing and consultations at free of cost(within Chennai limit) </p>
+                <h1>&nbsp;</h1>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-5 animate-box img-to-responsive animate-box" data-animate-effect="fadeInLeft">
                     <img src="images/person_1.jpg" alt="">
             </div>
