--- a/views/gallery.html
+++ b/views/gallery.html
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="col-md-12 fh5co-heading animate-box" style="margin-bottom: 20px;">
-				<h2>Category 3</h2>
+				<h2>Category 4</h2>
 			</div>
 			<div class="col-md-3 col-sm-3 fh5co-gallery_item">
 				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category4/1.png);" data-trigger="zoomerang"></div>
@@ -71,6 +71,27 @@
 			<div class="col-md-3 col-sm-3 fh5co-gallery_item">
 				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category4/4.png);" data-trigger="zoomerang"></div>
 				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category4/5.png);" data-trigger="zoomerang"></div>
+			</div>
+
+
+			<div class="col-md-12 fh5co-heading animate-box" style="margin-bottom: 20px;">
+				<h2>Category 5</h2>
+			</div>
+			<div class="col-md-6 col-sm-6 fh5co-gallery_item">
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category5/1.png);" data-trigger="zoomerang"></div>
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category5/2.png);" data-trigger="zoomerang"></div>
+			</div>
+			<div class="col-md-6 col-sm-6 fh5co-gallery_item">
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category5/3.png);" data-trigger="zoomerang"></div>
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category5/4.png);" data-trigger="zoomerang"></div>
+			</div>
+
+			<div class="col-md-12 fh5co-heading animate-box" style="margin-bottom: 20px;">
+				<h2>Category 6</h2>
+			</div>
+			<div ng-repeat="n in [].constructor(10) track by $index" class="col-md-6 col-sm-6 fh5co-gallery_item">
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category6/{{$index + 1}}.png);" data-trigger="zoomerang"></div>
+				<div class="fh5co-bg-img" style="background-image: url(images/gallery/category6/{{$index + 11}}.png);" data-trigger="zoomerang"></div>
 			</div>
 		</div>
 	</div>
