--- a/views/contact.html
+++ b/views/contact.html
@@ -1,19 +1,7 @@
-<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(images/hero_1.jpeg);" data-stellar-background-ratio="0.5">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<div class="display-t js-fullheight">
-					<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-						<h1>Get <em>in</em> Touch</h1>
-						<h2>Brought to you by <a href="https://anonymityfreelancing.github.io" target="_blank">Anonymity Freelancing</a></h2>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</header>
-
+<hero-section
+	title="Get <em>in</em> Touch"
+	subtitle="Brought to you by <a href='https://anonymityfreelancing.github.io' target='_blank'>Anonymity Freelancing</a>">
+</hero-section>
 
 <div id="fh5co-contact" class="fh5co-section animate-box">
 	<div class="container">
