--- a/views/home.html
+++ b/views/home.html
@@ -1,27 +1,20 @@
-<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(images/hero_1.jpeg);" data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="display-t js-fullheight">
-                    <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                        <h1>Go stylish with modular kitchen and wardrobes</h1>
-                        <h2>To Suit your budget</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+<hero-section
+	title="Go stylish with modular kitchen and wardrobes"
+	subtitle="To Suit your budget">
+</hero-section>
 
 
-<div id="fh5co-featured-testimony" class="fh5co-section">
+<div class="fh5co-section">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-push-1" style="text-align: center">
-                <h2>Modular kitchen starts from Rs.80,000  for individual client</h2>
-                <p>Special Project rates for builders of bulk orders <br/>
-                Drawing and consultations at free of cost(within Chennai limit) </p>
+                <blockquote>
+                    <p>
+                        Modular kitchen starts from Rs.80,000  for individual client<br />
+                        Special Project rates for builders of bulk orders <br/>
+                        Drawing and consultations at free of cost(within Chennai limit)
+                    </p>
+                </blockquote>
                 <h1>&nbsp;</h1>
             </div>
         </div>
@@ -31,7 +24,7 @@
             </div>
             <div class="col-md-7 animate-box" data-animate-effect="fadeInRight">
                 <blockquote>
-                    <p> &ldquo; A Room should never allow the eye to settle in one place. It should smile at you and create fantasy &rdquo;</p>
+                    <p class="margin-top-200"> &ldquo; A Room should never allow the eye to settle in one place. It should smile at you and create fantasy &rdquo;</p>
                     <p class="author"><cite>&mdash; Juan Montoya</cite></p>
                 </blockquote>
             </div>
