Update Kitchen Design

--- a/views/designs/compact.html
+++ b/views/designs/compact.html
@@ -1,4 +1,14 @@
 <hero-section
-	title="Material Specifications"
+	title="Compact Kitchen"
 	subtitle="Brought to you by <a href='https://anonymityfreelancing.github.io' target='_blank'>Anonymity Freelancing</a>">
 </hero-section>
+
+<div class="fh5co-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-push-3 ">
+				<img class="image" src="images/designs/image10.png" />
+			</div>
+		</div>
+	</div>
+</div>
