Fix for invisible headers

--- a/views/partials/hero-section.html
+++ b/views/partials/hero-section.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="display-t js-fullheight">
-					<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
+					<div class="display-tc js-fullheight" >
 						<h1 ng-bind-html="title"></h1>
 						<h2 ng-bind-html="subtitle"></h2>
 					</div>
