--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -10,7 +10,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.about">About Us</a></li>
                     <li class="dropdown" ui-sref-active="active">
                         <a class="dropdown-toggle" data-toggle="dropdown" ng-click="vm.showDropdownMenu($event)">
-                            Products
+                            Products {{vm.text}}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
